--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node ./backend/server.js",
     "test": "nodemon ./backend/server.js"
   },
   "author": "",
